--- a/server/template.tex
+++ b/server/template.tex
@@ -16,7 +16,7 @@
 \usepackage[dvipsnames]{xcolor} % for coloring text
 \definecolor{primaryColor}{RGB}{0, 0, 0} % define primary color
 \usepackage{enumitem} % for customizing lists
-\usepackage{fontawesome5} % for using icons
+% Note: fontawesome5 removed - requires extra fonts package
 \usepackage{amsmath} % for math
 \usepackage[
     pdftitle={John Doe's CV},
@@ -44,7 +44,7 @@
     \usepackage{lmodern}
 \fi
 
-\usepackage{charter}
+% Using default font instead of charter to avoid extra package requirements
 
 % Some settings:
 \raggedright
